-move the "sign in with demo account" button below "sign in" button -fix the overflow in long usernames in whotofollow tab

--- a/src/styles/PostDisplay.css
+++ b/src/styles/PostDisplay.css
@@ -8,6 +8,10 @@
   text-overflow: ellipsis;
 }
 
+.whotofollow-listitemtext{
+  width: 70%;
+}
+
 .usernameLinkOnPost:hover{
   text-decoration: underline;
   cursor: pointer;
