--- a/src/styles/WhotoFollow.css
+++ b/src/styles/WhotoFollow.css
@@ -27,6 +27,9 @@
 .whotofollow-name{
     font-size: 15px !important;
     font-weight: 500 !important;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    text-overflow: ellipsis;
 }
 
 .whotofollow-name:hover{
